--- a/ss12/pages/bai1.html
+++ b/ss12/pages/bai1.html
@@ -39,7 +39,7 @@
     <!-- header end -->
 
     <!-- nav start -->
-    <nav>
+    <nav class="nav">
         <div class="header1">
             <h1>Products</h1>
             <p>We display products based on the latest products we have, if you want</p>
@@ -63,5 +63,50 @@
         </div>
     </nav>
     <!-- nav end -->
+    <div class="search-filter">
+        <div class="search">
+            <input type="search" placeholder="Search property">
+            <button>Find Now</button>
+        </div>
+        <div class="filter">
+            <span class="material-symbols-outlined">filter_alt</span>
+            <div>Filter</div>
+        </div>
+    </div>
+
+    <!-- ------------------- -->
+    <div class="list"> 
+        <div class="anh">
+            <img src="https://tse2.mm.bing.net/th?id=OIP.55xrJdT3ckz5UX55xcVb7QHaLH&pid=Api&P=0&h=220" alt="">
+        </div>
+        <div class="info">
+            <p>Chair</p>
+            <b class="b1">White Aesthetic Chair</b>
+            <p class="p1">Combination of wood and wool</p>
+            <b class="b1">$63.47</b>
+        </div>
+        <br>
+        <div class="anh">
+            <img src="https://tse3.explicit.bing.net/th?id=OIP.JADOFqAzLIoWgD-k6qAZGwHaKN&pid=Api&P=0&h=220" alt="">
+        </div>
+        <div class="info">
+            <p>Table</p>
+            <b class="b1">Working Desk setup</b>
+            <p class="p1">Combination of wood and wool</p>
+            <b class="b1">$47.90</b>
+        </div>
+        <br>
+        <div class="anh">
+            <img src="https://tse4.mm.bing.net/th?id=OIP.ZanTxxQNJhB5Fk-1F0B0ngHaJQ&pid=Api&P=0&h=220" alt="">
+        </div>
+        <div class="info">
+            <p>Chair</p>
+            <b class="b1">White Minimalist Vase</b>
+            <p class="p1">Combination of wood and wool </p>
+            <b class="b1">$58.39</b>
+        </div>
+        
+
+    </div>
 </body>
 </html>
